Estrutura de API para Carrinho e Melhoria API de Produtos
