# controllers/productController.go
@@ -236,7 +236,7 @@ func GetAllProducts(db *sql.DB) fiber.Handler {
 // @Param user_id path int true "ID do Usuário"
 // @Success 200 {array} Product
 // @Failure 500 {object} map[string]string "Erro ao buscar produtos"
-// @Router /products/{user_id} [get]
+// @Router /products/user/{user_id} [get]
 func GetAllProductsByUserID(db *sql.DB) fiber.Handler {
 	return func(c *fiber.Ctx) error {
 		userID := c.Params("user_id")
